--- a/style/style.css
+++ b/style/style.css
@@ -60,9 +60,9 @@ header {
     width: 100%;
     align-items: center;
     justify-content: center;
-    /* padding: 5px; */
-    padding-block: 20px;
+    padding: 90px 0 0 0;
     background-color: #ececec;
+    font-size: 60%;
 }
 
 
@@ -129,20 +129,23 @@ section ul li {
 .artista-info {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
     gap: 5px;
     justify-content: center;
-
+    
+}
     /* videitos */
     .artista__videito {
         width: 400px;
         height: 300px;
     }
-}
+
 
 /* ------------------------------FINAL ARTISTAS */
 
 /* ------------------------------INICIO FEATURES */
+
+
 .features-contenedor {
     width: 100;
     display: grid;
@@ -225,7 +228,7 @@ section ul li {
 /* ------------------------------INICIO CONTACTO */
 .contecto-contenedor {
     width: 100%;
-    height: 350px;
+    height: 450px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 30px;
@@ -237,7 +240,7 @@ section ul li {
 
 .contacto-info {
     width: 100;
-    height: 300px;
+    height: 350px;
     display: grid;
     border: 2px solid whitesmoke;
     border-radius: 10px;
@@ -271,7 +274,7 @@ section ul li {
 
 .contacto-opinion {
     width: 100;
-    height: 300px;
+    height: 350px;
     display: grid;
     border: 2px solid whitesmoke;
     border-radius: 10px;
