--- a/style/style.css
+++ b/style/style.css
@@ -11,13 +11,6 @@
 /* ------------------------------INICIO BARRA DE NAVEGACION */
 header {
     position: sticky;
-    /* top: 0;
-    display: flex;
-    gap: 20px;
-    background-color: #FFA500;
-    width: 100%;
-    align-items: center;
-    justify-content: center; */
     display: flex;
     justify-content: center;
     background-color: #FFA500;
@@ -49,9 +42,7 @@ header {
     background-color: #FF7F24
 }
 
-.navbar-item a:hover {
-    background-color: #FFE5B4;
-}
+
 
 /* ------------------------------FIN BARRA DE NAVEGACION */
 
@@ -63,6 +54,10 @@ header {
     padding: 90px 0 0 0;
     background-color: #ececec;
     font-size: 60%;
+}
+
+.titulo-seccion:hover {
+    background-color: #FFE5B4;
 }
 
 
@@ -327,11 +322,15 @@ section ul li {
 /* ------------------------------INICIO PIE DE PAGINA */
 .pie-de-pagina {
     display: flex;
-    font-size: 10px;
+    font-size: 10%;
     background-color: #FFA500;
     align-items: center;
     justify-content: space-around;
     padding: 5px;
+}
+
+footer div div h4{
+    font-size: 16px;
 }
 
 /* ------------------------------FIN PIE DE PAGINA */
