--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
     font-family: "Sansation", sans-serif;
 }
 
-/* ------------------------------INICIO BARRA DE NAVEGACION */
+/* ------------------------------INICIO BARRA DE NAVEGACION (reemplazada por BOOTSTRAP) */
 header {
     position: sticky;
     display: flex;
@@ -42,10 +42,9 @@ header {
     background-color: #FF7F24
 }
 
-
-
 /* ------------------------------FIN BARRA DE NAVEGACION */
 
+/* ------------------------------INICIO TITULO DE CADA PAGINA */
 .titulo-seccion {
     display: flex;
     width: 100%;
@@ -60,6 +59,7 @@ header {
     background-color: #FFE5B4;
 }
 
+/* ------------------------------INICIO TITULO DE CADA PAGINA */
 
 /* ------------------------------INICIO MAIN */
 .main-principal {
@@ -136,12 +136,9 @@ section ul li {
     height: 300px;
 }
 
-
 /* ------------------------------FINAL ARTISTAS */
 
 /* ------------------------------INICIO FEATURES */
-
-
 .features-contenedor {
     width: 100;
     display: grid;
@@ -344,8 +341,10 @@ footer div div h4 {
     width: 50px;
 }
 
-@media screen and (max-width: 480px) {
+/* ------------------------------ FIN FIXED */
 
+/* ------------------------------ INICIO RESPONSIVE */
+@media screen and (max-width: 480px) {
     .pie-de-pagina {
         display: flex;
         font-size: 5%;
@@ -357,25 +356,25 @@ footer div div h4 {
 
     footer div div h4 {
         font-size: 10px;
-       
+
     }
 
-    article h3{
+    article h3 {
 
         font-size: 20px;
     }
 
-.features-contenedor {
-    width: 100;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    place-items: center;
-    row-gap: 5px;
-    padding: 10px;
-    background-color: #ececec;
-    font-size: 80%;
+    .features-contenedor {
+        width: 100;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        place-items: center;
+        row-gap: 5px;
+        padding: 10px;
+        background-color: #ececec;
+        font-size: 80%;
+    }
 }
 
-
-}
+/* ------------------------------ INICIO RESPONSIVE */
