--- a/style/style.css
+++ b/style/style.css
@@ -1,380 +1,192 @@
 /* Tipografias: Sensation, Pompire y Agdasima */
-@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Pompiere&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Pompiere&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Sansation", sans-serif;
+  font-family: Sansation;
+  color: black;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* ------------------------------INICIO BARRA DE NAVEGACION (reemplazada por BOOTSTRAP) */
-header {
-    position: sticky;
-    display: flex;
-    justify-content: center;
-    background-color: #FFA500;
+.titulo-seleccion {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 90px 0 0 0;
+  background-color: #ececec;
+  font-size: 60%;
 }
 
-.header__logo {
-    width: 137px;
+main .titulo-seccion {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 90px 0 0 0;
+  background-color: #ececec;
+  font-size: 60%;
+}
+main .titulo-seccion :hover {
+  background-color: #FFE5B4;
+}
+main .artistas {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 60px 60px 60px;
+  gap: 10px;
+  background-color: #ececec;
+}
+main .artistas .artiatas__item {
+  background-color: #Cc5500;
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
+}
+main .artistas .artiatas__item .artista-info {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 5px;
+  justify-content: center;
+}
+main .artistas .artiatas__item .artista__videito {
+  width: 400px;
+  height: 300px;
 }
 
-.header__titulo {
-    font-size: 150%;
-    margin: 0 0 0 40px;
+main .titulo-seccion {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 90px 0 0 0;
+  background-color: #ececec;
+  font-size: 60%;
+}
+main .titulo-seccion :hover {
+  background-color: #FFE5B4;
+}
+main .features-contenedor {
+  width: 100;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  place-items: center;
+  row-gap: 10px;
+  padding: 20px;
+  background-color: #ececec;
+}
+main .features-contenedor .caja.matriz {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+main .features-contenedor .matriz-imagen {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 70%;
+}
+main .features-contenedor .caja.filtro {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+main .features-contenedor .filtro-imagen {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+main .features-contenedor .caja.envolvente {
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+main .features-contenedor .envolvente-imagen {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  width: 65%;
+}
+main .features-contenedor .caja.osciladores {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+main .features-contenedor .osciladores-imagen {
+  grid-column: 1/2;
+  grid-row: 4/5;
+  width: 70%;
 }
 
-.navbar__menu {
-    display: flex;
-    list-style-type: none;
-    gap: 10px;
-    align-items: center;
-    height: 100%;
-}
-
-.navbar-item a {
-    text-decoration: none;
-    color: #8B4500;
-}
-
-.navbar-item.seleccion a {
-    background-color: #FF7F24
-}
-
-/* ------------------------------FIN BARRA DE NAVEGACION */
-
-/* ------------------------------INICIO TITULO DE CADA PAGINA */
-.titulo-seccion {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    padding: 90px 0 0 0;
-    background-color: #ececec;
-    font-size: 60%;
-}
-
-.titulo-seccion:hover {
-    background-color: #FFE5B4;
-}
-
-/* ------------------------------INICIO TITULO DE CADA PAGINA */
-
-/* ------------------------------INICIO MAIN */
-.main-principal {
-    background-color: #ececec;
-}
-
-.main-section {
-    width: 80%;
-    /* background-color: red; */
-    padding: 5px;
-    margin-left: 30px;
-}
-
-.imagen-minifreak {
-    display: flex;
-    justify-content: center;
-    padding: 60px 0 0 0;
-}
-
-.main-imagen {
-    width: 50%;
-}
-
-.intro-items {
-    padding: 10px;
-}
-
-section ul {
-    margin-top: 10px;
-}
-
-section ul li {
-    margin-left: 30px;
-    list-style-type: disc;
-}
-
-.suscripcion {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 50px;
-}
-
-/* ------------------------------FIN MAIN */
-
-/* ------------------------------INICIO ARTISTAS */
-.artistas {
-    display: flex;
-    flex-direction: column;
-    padding: 30px 60px 60px 60px;
-    gap: 10px;
-    background-color: #ececec;
-}
-
-.artiatas__item {
-    background-color: #Cc5500;
-    border-radius: 8px;
-    overflow: hidden;
-    display: flex;
-}
-
-.artista-info {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    gap: 5px;
-    justify-content: center;
-
-}
-
-/* videitos */
-.artista__videito {
-    width: 400px;
-    height: 300px;
-}
-
-/* ------------------------------FINAL ARTISTAS */
-
-/* ------------------------------INICIO FEATURES */
-.features-contenedor {
-    width: 100;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    place-items: center;
-    row-gap: 10px;
-    padding: 20px;
-    background-color: #ececec;
-}
-
-.caja.matriz {
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-.matriz-imagen {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    width: 60%;
-}
-
-.caja.filtro {
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
-.filtro-imagen {
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-
-.caja.envolvente {
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-
-.envolvente-imagen {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    width: 65%;
-}
-
-.caja.osciladores {
-    grid-column: 2/3;
-    grid-row: 4/5;
-}
-
-.osciladores-imagen {
-    grid-column: 1/2;
-    grid-row: 4/5;
-    width: 70%;
-}
-
-/* ------------------------------FINAL FEATURES */
-
-/* ------------------------------INICIO NEWS - NUEVOS SINTES */
-.nuevos-sintes {
-    display: flex;
-    padding: 30px;
-    gap: 10px;
-}
-
-.sinte-item {
-    background-color: #ececec;
-    border-radius: 10px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-}
-
-.sinte__imagen {
-    max-width: 100%;
-}
-
-/* ------------------------------FINAL FEATURES */
-
-/* ------------------------------INICIO CONTACTO */
-.contecto-contenedor {
-    width: 100%;
-    height: 450px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 30px;
-    place-items: center;
-    border-radius: 10px;
-    overflow: hidden;
-
-}
-
-.contacto-info {
-    width: 100;
-    height: 350px;
-    display: grid;
-    border: 2px solid whitesmoke;
-    border-radius: 10px;
-    padding: 10px;
-    place-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-areas:
-        "nom nom"
-        "mai mai"
-        "cel cel"
-        "tex tex"
-        "btna btnb";
-}
-
-.nom {
-    grid-area: nom;
-}
-
-.mai {
-    grid-area: mai;
-}
-
-.cel {
-    grid-area: cel;
-}
-
-.tex {
-    grid-area: tex;
-}
-
-.contacto-opinion {
-    width: 100;
-    height: 350px;
-    display: grid;
-    border: 2px solid whitesmoke;
-    border-radius: 10px;
-    padding: 10px;
-    place-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas:
-        "contacto__opinion__texto contacto__opinion"
-        "btnop btnop";
-}
-
-.contacto__opinion__texto {
-    grid-area: contacto__opinion__texto;
-}
-
-.contacto__opinion {
-    grid-area: contacto__opinion;
-}
-
-.btnop {
-    grid-area: btnop;
-}
-
-.btnop__flex {
-    display: flex;
-    gap: 10px;
-}
-
-.mensaje-contacto {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.mensaje_1 {
-    color: #8B4500
-}
-
-.mensaje_2 {
-    color: #Cc5500;
-}
-
-.mensaje_3 {
-    color: #FFA500;
-}
-
-/* ------------------------------FINAL CONTACTO */
-
-/* ------------------------------INICIO PIE DE PAGINA */
 .pie-de-pagina {
-    display: flex;
-    font-size: 10%;
-    background-color: #FFA500;
-    align-items: center;
-    justify-content: space-around;
-    padding: 5px;
+  display: flex;
+  background-color: #FFA500;
+  align-items: center;
+  justify-content: space-around;
+  padding: 3px;
+}
+.pie-de-pagina h4 {
+  font-size: 16px;
 }
 
-footer div div h4 {
-    font-size: 16px;
+header .header__logo {
+  width: 137px;
 }
 
-/* ------------------------------FIN PIE DE PAGINA */
+main .titulo-seccion {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 90px 0 0 0;
+  background-color: #ececec;
+  font-size: 60%;
+}
+main .titulo-seccion :hover {
+  background-color: #FFE5B4;
+}
+main .nuevos-sintes {
+  display: flex;
+  padding: 30px;
+  gap: 10px;
+}
+main .nuevos-sintes .sinte-item {
+  background-color: #ececec;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+}
+main .nuevos-sintes .sinte-item .sinte__imagen {
+  max-width: 100%;
+}
 
-/* ------------------------------ ICONO FIXED */
+.main-principal {
+  background-color: #ececec;
+}
+.main-principal .imagen-minifreak {
+  display: flex;
+  justify-content: center;
+  padding: 60px 0 0 0;
+}
+.main-principal .imagen-minifreak .main-imagen {
+  width: 50%;
+}
+.main-principal .main-section {
+  width: 80%;
+  padding: 5px;
+  margin-left: 30px;
+}
+.main-principal .main-section ul li {
+  margin-left: 30px;
+  list-style-type: disc;
+}
+.main-principal .intro-items {
+  padding: 10px;
+}
+
 .suscripcion {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 50px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 50px;
 }
 
-/* ------------------------------ FIN FIXED */
-
-/* ------------------------------ INICIO RESPONSIVE */
-@media screen and (max-width: 480px) {
-    .pie-de-pagina {
-        display: flex;
-        font-size: 5%;
-        background-color: #FFA500;
-        align-items: center;
-        justify-content: space-around;
-        padding: 1px;
-    }
-
-    footer div div h4 {
-        font-size: 10px;
-
-    }
-
-    article h3 {
-
-        font-size: 20px;
-    }
-
-    .features-contenedor {
-        width: 100;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        place-items: center;
-        row-gap: 5px;
-        padding: 10px;
-        background-color: #ececec;
-        font-size: 80%;
-    }
-}
-
-/* ------------------------------ INICIO RESPONSIVE */
+/*# sourceMappingURL=style.css.map */
