--- a/style/backup.css
+++ b/style/backup.css
@@ -219,7 +219,7 @@ section ul li {
 /* ------------------------------FINAL FEATURES */
 
 /* ------------------------------INICIO CONTACTO */
-.contecto-contenedor {
+.contacto-contenedor {
     width: 100%;
     height: 450px;
     display: grid;
