--- a/style/style.css
+++ b/style/style.css
@@ -67,6 +67,92 @@ main .titulo-seccion {
 main .titulo-seccion :hover {
   background-color: #FFE5B4;
 }
+main .contacto-contenedor {
+  width: 100%;
+  height: 450px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 30px;
+  place-items: center;
+  border-radius: 10px;
+  overflow: hidden;
+}
+main .contacto-contenedor .contacto-info {
+  width: 100;
+  height: 350px;
+  display: grid;
+  border: 2px solid whitesmoke;
+  border-radius: 10px;
+  padding: 10px;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas: "nom nom" "mai mai" "cel cel" "tex tex" "btna btnb";
+}
+main .contacto-contenedor .contacto-info .nom {
+  grid-area: nom;
+}
+main .contacto-contenedor .contacto-info .mai {
+  grid-area: mai;
+}
+main .contacto-contenedor .contacto-info .cel {
+  grid-area: cel;
+}
+main .contacto-contenedor .contacto-info .tex {
+  grid-area: tex;
+}
+main .contacto-contenedor .contacto-opinion {
+  width: 100;
+  height: 350px;
+  display: grid;
+  border: 2px solid whitesmoke;
+  border-radius: 10px;
+  padding: 10px;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas: "contacto__opinion__texto contacto__opinion" "btnop btnop";
+}
+main .contacto-contenedor .contacto-opinion .contacto__opinion__texto {
+  grid-area: contacto__opinion__texto;
+}
+main .contacto-contenedor .contacto-opinion .contacto__opinion {
+  grid-area: contacto__opinion;
+}
+main .contacto-contenedor .contacto-opinion .btnop {
+  grid-area: btnop;
+}
+main .contacto-contenedor .contacto-opinion .btnop__flex {
+  display: flex;
+  gap: 10px;
+}
+main .mensaje-contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .mensaje-contacto .mensaje_1 {
+  color: #8B4500;
+}
+main .mensaje-contacto .mensaje_2 {
+  color: #Cc5500;
+}
+main .mensaje-contacto .mensaje_3 {
+  color: #FFA500;
+}
+
+main .titulo-seccion {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 90px 0 0 0;
+  background-color: #ececec;
+  font-size: 60%;
+}
+main .titulo-seccion :hover {
+  background-color: #FFE5B4;
+}
 main .features-contenedor {
   width: 100;
   display: grid;
