--- a/sass/_artistas.scss
+++ b/sass/_artistas.scss
@@ -47,3 +47,26 @@ main {
         }
     }
 }
+
+@media screen and (max-width: 480px) {
+
+    main {
+
+
+        .artistas {
+
+            flex-direction: column;
+
+            padding: 30px 30px 60px 30px;
+
+            .artiatas__item {
+
+                flex-direction: column;
+            }
+
+
+        }
+    }
+
+
+}
