--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -9,7 +9,8 @@ main {
         justify-content: center;
         padding: 90px 0 0 0;
         background-color: v.$background-color-pri;
-        font-size: 60%;
+        
+        > h1 {font-size: 40px;}
 
         :hover {
             background-color: v.$fuente-color-ter;
@@ -35,7 +36,7 @@ main {
         .matriz-imagen {
             grid-column: 2/3;
             grid-row: 1/2;
-            width: 70%;
+            width: 90%;
         }
 
         .caja.filtro {
@@ -46,6 +47,7 @@ main {
         .filtro-imagen {
             grid-column: 1/2;
             grid-row: 2/3;
+            width: 90%;
         }
 
         .caja.envolvente {
@@ -56,7 +58,7 @@ main {
         .envolvente-imagen {
             grid-column: 2/3;
             grid-row: 3/4;
-            width: 65%;
+            width: 90%;
         }
 
         .caja.osciladores {
@@ -67,7 +69,79 @@ main {
         .osciladores-imagen {
             grid-column: 1/2;
             grid-row: 4/5;
-            width: 70%;
+            width: 90%;
         }
+    }
+
+
+    @media screen and (max-width: 480px) {
+
+        .titulo-seccion > h1{
+            font-size: 20px;
+        }
+
+        .features-contenedor {
+            width: 100;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(8, 1fr);
+            place-items: center;
+            row-gap: 5px;
+            padding: 10px;
+
+            font-size: 80%;
+
+            .matriz-imagen {
+                grid-column: 1/2;
+                grid-row: 1/2;
+                width: 90%;
+            }
+
+            .caja.matriz {
+                grid-column: 1/2;
+                grid-row: 2/3;
+            }
+
+            .filtro-imagen {
+                grid-column: 1/2;
+                grid-row: 3/4;
+                width: 90%;
+            }
+
+            .caja.filtro {
+                grid-column: 1/2;
+                grid-row: 4/5;
+            }
+
+            .envolvente-imagen {
+                grid-column: 1/2;
+                grid-row: 5/6;
+                width: 90%;
+            }
+
+            .caja.envolvente {
+                grid-column: 1/2;
+                grid-row: 6/7;
+            }
+
+            .osciladores-imagen {
+                grid-column: 1/2;
+                grid-row: 7/8;
+                width: 90%;
+            }
+
+            .caja.osciladores {
+                grid-column: 1/2;
+                grid-row: 8/9;
+            }
+
+
+
+
+
+
+        }
+
+
     }
 }
