--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -11,3 +11,29 @@
         font-size: 16px;
     }
 }
+
+@media screen and (max-width: 480px) {
+
+    .pie-de-pagina {
+        display: flex;
+        font-size: 5%;
+        background-color: #FFA500;
+        align-items: center;
+        justify-content: space-around;
+        padding: 1px;
+
+        h4 {
+
+            font-size: 10px;
+
+        }
+
+    }
+
+
+
+
+
+
+
+}
