--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 //sass --watch sass/style.scss style/style.css
 
 @use "variables";
+@use "titulo-seccion";
 @use "artistas";
 @use "contacto";
 @use "features";
