--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -6,7 +6,7 @@
     .imagen-minifreak {
         display: flex;
         justify-content: center;
-        padding: 60px 0 0 0;
+        padding: 5px 0 0 0;
 
         .main-imagen {
             width: 50%;
@@ -18,18 +18,13 @@
         padding: 5px;
         margin-left: 30px;
 
-        > h1{
-            font-size: 3rem;
-        }
-
         h3{
             font-size: 2rem;
         }
 
         ul li {
-            margin-left: 30px;
+            margin-left: 20px;
             list-style-type:disc;
-
         }
     }
 
@@ -46,24 +41,17 @@
     width: 50px;
 }
 
-
 @media screen and (max-width: 480px){
-
 
     .main-principal{
 
             .imagen-minifreak{
 
                 .main-imagen{
-
                     width: 70%;
                 }
-
-
             }
         
-
-
         .main-section{
 
             h1{
@@ -75,13 +63,15 @@
                 font-weight: bold;
                 
             }
+
+            ul li {
+            margin-left: 3px;
+            list-style-type:disc;
+        }
         }
     }
-
     .suscripcion {
 
         width: 10%;
     }
-
-
 }
