--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -2,20 +2,6 @@
 
 main {
 
-    .titulo-seccion {
-        display: flex;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        padding: 90px 0 0 0;
-        background-color: v.$background-color-pri;
-        font-size: 60%;
-
-        :hover {
-            background-color: v.$fuente-color-ter;
-        }
-    }
-
     .nuevos-sintes {
         display: flex;
         padding: 30px;
@@ -35,4 +21,22 @@ main {
             }
         }
     }
+}
+
+@media screen and (max-width: 480px){
+
+main{
+
+.nuevos-sintes{
+    flex-direction: column;
+
+    
+    
+}
+
+}
+
+
+
+
 }
