--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -3,7 +3,7 @@
 
 main {
 
-    
+    background-color: v.$background-color-pri;
 
     .contacto-contenedor {
         width: 100%;
@@ -15,14 +15,19 @@ main {
         border-radius: 10px;
         overflow: hidden;
 
+
+
+
+
         .contacto-info {
             width: 100;
-            height: 350px;
+            height: 400px;
             display: grid;
             border: 2px solid whitesmoke;
             border-radius: 10px;
             padding: 10px;
             place-items: center;
+            justify-items: end;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(5, 1fr);
             grid-template-areas:
@@ -52,17 +57,30 @@ main {
 
         .contacto-opinion {
             width: 100;
-            height: 350px;
+            height: 400px;
             display: grid;
             border: 2px solid whitesmoke;
             border-radius: 10px;
             padding: 10px;
             place-items: center;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr);
+
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(3, 1fr);
             grid-template-areas:
-                "contacto__opinion__texto contacto__opinion"
-                "btnop btnop";
+                "contacto__opinion__texto"
+                "contacto__opinion"
+                "btnop";
+
+
+            // grid-template-columns: repeat(2, 1fr);
+            // grid-template-rows: repeat(2, 1fr);
+            // grid-template-areas:
+            //     "contacto__opinion__texto contacto__opinion"
+            //     "btnop btnop";
+
+
+
+
 
 
             .contacto__opinion__texto {
@@ -93,7 +111,7 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
 
         .mensaje_1 {
             color: #8B4500;
@@ -110,5 +128,52 @@ main {
     }
 
 
+    @media screen and (max-width: 480px) {
+
+
+        .contacto-contenedor {
+
+            height: auto;
+
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(2, 1fr);
+            grid-template-areas:
+                "info"
+                "opinion";
+
+            .contacto-info {
+                grid-area: info;
+            }
+
+            .contacto-opinion {
+                grid-area: opinion;
+            }
+
+
+
+        }
+
+.mensaje_1{
+
+    font-size: 1.2rem;
+
+}
+
+.mensaje_2{
+    font-size: 1.2rem;
+
+}
+
+
+.mensaje_3{
+    font-size: 1rem;
+    margin-left: 8px;
+
+
+}
+
+
+
+    }
 
 }
