--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,9 @@ main .artistas .artiatas__item .artista__videito {
     flex-direction: column;
   }
 }
+main {
+  background-color: #ececec;
+}
 main .contacto-contenedor {
   width: 100%;
   height: 450px;
@@ -88,12 +91,13 @@ main .contacto-contenedor {
 }
 main .contacto-contenedor .contacto-info {
   width: 100;
-  height: 350px;
+  height: 400px;
   display: grid;
   border: 2px solid whitesmoke;
   border-radius: 10px;
   padding: 10px;
   place-items: center;
+  justify-items: end;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-template-areas: "nom nom" "mai mai" "cel cel" "tex tex" "btna btnb";
@@ -112,15 +116,15 @@ main .contacto-contenedor .contacto-info .tex {
 }
 main .contacto-contenedor .contacto-opinion {
   width: 100;
-  height: 350px;
+  height: 400px;
   display: grid;
   border: 2px solid whitesmoke;
   border-radius: 10px;
   padding: 10px;
   place-items: center;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-areas: "contacto__opinion__texto contacto__opinion" "btnop btnop";
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: "contacto__opinion__texto" "contacto__opinion" "btnop";
 }
 main .contacto-contenedor .contacto-opinion .contacto__opinion__texto {
   grid-area: contacto__opinion__texto;
@@ -148,6 +152,30 @@ main .mensaje-contacto .mensaje_2 {
 }
 main .mensaje-contacto .mensaje_3 {
   color: #FFA500;
+}
+@media screen and (max-width: 480px) {
+  main .contacto-contenedor {
+    height: auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "info" "opinion";
+  }
+  main .contacto-contenedor .contacto-info {
+    grid-area: info;
+  }
+  main .contacto-contenedor .contacto-opinion {
+    grid-area: opinion;
+  }
+  main .mensaje_1 {
+    font-size: 1.2rem;
+  }
+  main .mensaje_2 {
+    font-size: 1.2rem;
+  }
+  main .mensaje_3 {
+    font-size: 1rem;
+    margin-left: 8px;
+  }
 }
 
 main .features-contenedor {
