--- a/sass/_artistas.scss
+++ b/sass/_artistas.scss
@@ -1,20 +1,16 @@
 @use "variables" as v;
 
-
-
 main {
-
-    //titulo seccion
 
     .artistas {
         display: flex;
         flex-direction: column;
         padding: 30px 60px 60px 60px;
         gap: 10px;
-        background-color: #ececec;
+        background-color: v.$background-color-pri;
 
         .artiatas__item {
-            background-color: #Cc5500;
+            background-color: v.$background-color-ter;
             border-radius: 8px;
             overflow: hidden;
             display: flex;
@@ -25,7 +21,6 @@ main {
                 padding: 10px;
                 gap: 5px;
                 justify-content: center;
-
             }
 
             .artista__videito {
@@ -37,32 +32,14 @@ main {
 }
 
 @media screen and (max-width: 480px) {
-
     main {
-
-       
-
-
         .artistas {
-
             flex-direction: column;
-
             padding: 5px 30px 60px 30px;
 
             .artiatas__item {
-
                 flex-direction: column;
-
-
-                // .artista__videito {
-                //     width: 365px;
-                //     height: 300px;
-                // }
             }
-
-
         }
     }
-
-
 }
