--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,6 +1,5 @@
 @use "variables" as v;
 
-
 main {
 
     background-color: v.$background-color-pri;
@@ -15,15 +14,11 @@ main {
         border-radius: 10px;
         overflow: hidden;
 
-
-
-
-
         .contacto-info {
             width: 100;
             height: 400px;
             display: grid;
-            border: 2px solid whitesmoke;
+            border: 2px solid #f5f5f5;
             border-radius: 10px;
             padding: 10px;
             place-items: center;
@@ -71,27 +66,14 @@ main {
                 "contacto__opinion"
                 "btnop";
 
-
-            // grid-template-columns: repeat(2, 1fr);
-            // grid-template-rows: repeat(2, 1fr);
-            // grid-template-areas:
-            //     "contacto__opinion__texto contacto__opinion"
-            //     "btnop btnop";
-
-
-
-
-
-
             .contacto__opinion__texto {
                 grid-area: contacto__opinion__texto;
             }
 
-
             .contacto__opinion {
                 grid-area: contacto__opinion;
 
-                
+
             }
 
             .btnop {
@@ -101,19 +83,19 @@ main {
             .btnop__flex {
                 display: flex;
                 gap: 10px;
+
+                .botoncito {
+                    background-color: #f3c165;
+                    color: blue;
+                }
             }
-
-
         }
-
-
     }
 
     .mensaje-contacto {
         display: flex;
         flex-direction: column;
         align-items: center;
-
 
         .mensaje_1 {
             color: #8B4500;
@@ -126,12 +108,9 @@ main {
         .mensaje_3 {
             color: #FFA500;
         }
-
     }
 
-
     @media screen and (max-width: 480px) {
-
 
         .contacto-contenedor {
 
@@ -151,34 +130,22 @@ main {
 
             .contacto-opinion {
                 grid-area: opinion;
-                
+
             }
-
-
-
         }
 
-.mensaje_1{
+        .mensaje_1 {
+            font-size: 1.2rem;
+        }
 
-    font-size: 1.2rem;
-
-}
-
-.mensaje_2{
-    font-size: 1.2rem;
-
-}
+        .mensaje_2 {
+            font-size: 1.2rem;
+        }
 
 
-.mensaje_3{
-    font-size: 1rem;
-    margin-left: 8px;
-
-
-}
-
-
-
+        .mensaje_3 {
+            font-size: 1rem;
+            margin-left: 8px;
+        }
     }
-
 }
