--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -18,7 +18,7 @@ main {
             width: 100;
             height: 400px;
             display: grid;
-            border: 2px solid #f5f5f5;
+            border: 2px solid v.$borde-color-pri;
             border-radius: 10px;
             padding: 10px;
             place-items: center;
@@ -31,7 +31,6 @@ main {
                 "cel cel"
                 "tex tex"
                 "btna btnb";
-
 
             .nom {
                 grid-area: nom;
@@ -54,7 +53,7 @@ main {
             width: 100;
             height: 400px;
             display: grid;
-            border: 2px solid whitesmoke;
+            border: 2px solid v.$borde-color-pri;
             border-radius: 10px;
             padding: 10px;
             place-items: center;
@@ -72,8 +71,6 @@ main {
 
             .contacto__opinion {
                 grid-area: contacto__opinion;
-
-
             }
 
             .btnop {
@@ -98,15 +95,15 @@ main {
         align-items: center;
 
         .mensaje_1 {
-            color: #8B4500;
+            color: v.$fuente-color-sec;
         }
 
         .mensaje_2 {
-            color: #Cc5500;
+            color: v.$fuente-color-ter;
         }
 
         .mensaje_3 {
-            color: #FFA500;
+            color: v.$fuente-color-cua;
         }
     }
 
@@ -115,7 +112,6 @@ main {
         .contacto-contenedor {
 
             height: auto;
-
             grid-template-columns: 1fr;
             grid-template-rows: repeat(2, 1fr);
             grid-template-areas:
@@ -141,7 +137,6 @@ main {
         .mensaje_2 {
             font-size: 1.2rem;
         }
-
 
         .mensaje_3 {
             font-size: 1rem;
