--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,8 @@ $background-color-ter: #Cc5500;
 $fuente-color-pri: black;
 $fuente-color-sec: #8B4500;
 $fuente-color-ter: #Cc5500;
+$fuente-color-cua: #FFA500;
+$borde-color-pri: #f5f5f5;
 
 *{
 font-family: $fuente-pri;
@@ -17,13 +19,3 @@ padding: 0;
 box-sizing: border-box;
 
 }
-
-// .titulo-seleccion{
-//     display: flex;
-//     width: 100%;
-//     align-items: center;
-//     justify-content: center;
-//     padding: 90px 0 0 0;
-//     background-color: red;
-//     font-size: 60%;
-// }
