--- a/style/style.css
+++ b/style/style.css
@@ -120,7 +120,7 @@ main .contacto-contenedor .contacto-opinion {
   width: 100;
   height: 400px;
   display: grid;
-  border: 2px solid whitesmoke;
+  border: 2px solid #f5f5f5;
   border-radius: 10px;
   padding: 10px;
   place-items: center;
@@ -301,7 +301,8 @@ main .features-contenedor .osciladores-imagen {
   .pie-de-pagina {
     display: flex;
     font-size: 5%;
-    background-color: #FFA500;
+    background: #FFA500;
+    background: linear-gradient(0deg, rgb(255, 165, 0) 0%, rgb(255, 165, 0) 91%, rgb(236, 236, 236) 99%);
     align-items: center;
     justify-content: space-around;
     padding: 1px;
@@ -390,6 +391,7 @@ main .nuevos-sintes .sinte-item .sinte__imagen {
   bottom: 5px;
   right: 10px;
   width: 50px;
+  animation: balanceo 2s infinite ease;
 }
 
 @media screen and (max-width: 480px) {
@@ -409,6 +411,20 @@ main .nuevos-sintes .sinte-item .sinte__imagen {
   }
   .suscripcion {
     width: 10%;
+  }
+}
+@keyframes balanceo {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+  75% {
+    transform: translateX(-3px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 
