--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -35,7 +35,7 @@
     }
 
     .main-section {
-        width: 80%;
+        width: 95%;
         padding: 5px;
         margin-left: 25px;
 
@@ -51,6 +51,12 @@
 
     .intro-items {
         padding: 10px;
+
+        >p {
+            display: flex;
+            text-align: justify;
+        }
+
     }
 }
 
@@ -80,10 +86,10 @@
         .main-section {
 
             margin-left: 5px;
+            width: 95%;
 
-            h1 {
-                font-size: 2rem;
-            }
+
+
 
             h3 {
                 font-size: 1.1rem;
