--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -19,6 +19,10 @@ main {
             .sinte__imagen {
                 max-width: 100%;
             }
+
+            p {
+                text-align: justify;
+            }
         }
     }
 }
