--- a/style/style.css
+++ b/style/style.css
@@ -195,6 +195,7 @@ main .features-contenedor {
   row-gap: 10px;
   padding: 40px;
   background-color: #ececec;
+  text-align: justify;
 }
 main .features-contenedor .caja.matriz {
   grid-column: 1/2;
@@ -299,13 +300,8 @@ main .features-contenedor .osciladores-imagen {
 
 @media screen and (max-width: 480px) {
   .pie-de-pagina {
-    display: flex;
     font-size: 5%;
-    background: #FFA500;
-    background: linear-gradient(0deg, rgb(255, 165, 0) 0%, rgb(255, 165, 0) 91%, rgb(236, 236, 236) 99%);
-    align-items: center;
-    justify-content: space-around;
-    padding: 1px;
+    padding: 5px 1px 1px 1px;
   }
   .pie-de-pagina h4 {
     font-size: 10px;
@@ -336,6 +332,9 @@ main .nuevos-sintes .sinte-item {
 }
 main .nuevos-sintes .sinte-item .sinte__imagen {
   max-width: 100%;
+}
+main .nuevos-sintes .sinte-item p {
+  text-align: justify;
 }
 
 @media screen and (max-width: 480px) {
@@ -371,7 +370,7 @@ main .nuevos-sintes .sinte-item .sinte__imagen {
   }
 }
 .main-principal .main-section {
-  width: 80%;
+  width: 95%;
   padding: 5px;
   margin-left: 25px;
 }
@@ -384,6 +383,10 @@ main .nuevos-sintes .sinte-item .sinte__imagen {
 }
 .main-principal .intro-items {
   padding: 10px;
+}
+.main-principal .intro-items > p {
+  display: flex;
+  text-align: justify;
 }
 
 .suscripcion {
@@ -400,9 +403,7 @@ main .nuevos-sintes .sinte-item .sinte__imagen {
   }
   .main-principal .main-section {
     margin-left: 5px;
-  }
-  .main-principal .main-section h1 {
-    font-size: 2rem;
+    width: 95%;
   }
   .main-principal .main-section h3 {
     font-size: 1.1rem;
