--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -132,15 +132,20 @@ main {
 
         .mensaje_1 {
             font-size: 1.2rem;
+            margin-left: 4px;
+            text-align: center;
         }
 
         .mensaje_2 {
             font-size: 1.2rem;
+            margin-left: 4px;
+            text-align: center;
         }
 
         .mensaje_3 {
             font-size: 1rem;
-            margin-left: 8px;
+            margin-left: 4px;
+            text-align: center;
         }
     }
 }
