--- a/style/style.css
+++ b/style/style.css
@@ -299,6 +299,14 @@ main .features-contenedor .osciladores-imagen {
   justify-content: space-around;
   padding: 10px 0 0 5px;
 }
+.pie-de-pagina h2 {
+  color: #8B4500;
+  font-size: 1.2rem;
+}
+.pie-de-pagina h3 {
+  color: #Cc5500;
+  font-size: 1.2rem;
+}
 .pie-de-pagina h4 {
   font-size: 16px;
 }
