--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -32,6 +32,15 @@
         font-size: 5%;
         padding: 5px 1px 1px 1px;
 
+        h2{
+font-size: 0.5rem;
+
+        }
+
+        h3{
+font-size: 0.5rem;
+        }
+
         h4 {
             font-size: 10px;
         }
