--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,15 +1,19 @@
 @use "variables" as v;
 
 .pie-de-pagina {
-    display: flex;
+
+    @include v.flx-bx(row, 10px 0 0 5px, 0px, space-around);
+    align-items: center;
+    //display: flex;
     // background-color: v.$background-color-sec;
+    //justify-content: space-around;
+    //padding: 10px 0 0 5px;
+
 
     background: #FFA500;
     background: linear-gradient(0deg, rgba(255, 165, 0, 1) 0%, rgba(255, 165, 0, 1) 91%, rgba(236, 236, 236, 1) 99%);
 
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px 0 0 5px;
+
 
     h2 {
         color: v.$fuente-color-sec;
@@ -32,13 +36,13 @@
         font-size: 5%;
         padding: 5px 1px 1px 1px;
 
-        h2{
-font-size: 0.5rem;
+        h2 {
+            font-size: 0.5rem;
 
         }
 
-        h3{
-font-size: 0.5rem;
+        h3 {
+            font-size: 0.5rem;
         }
 
         h4 {
